@@ -32,7 +32,6 @@ Module::Build -> new
 		HTML::TreeBuilder        => 4.2,
 		HTTP::Tiny               => 0.022,
 		Hash::FieldHash          => 0.12,
-		IO::File                 => 1.15,
 		Lingua::EN::StopWordList => 1.00,
 		List::Compare            => 0.37,
 		open                     => 1.08,
@@ -40,6 +39,7 @@ Module::Build -> new
 		Pod::Usage               => 1.51,
 		strict                   => 0.00,
 		Text::CSV                => 1.21,
+		Text::CSV::Slurp         => 1,
 		Text::Xslate             => 1.5015,
 		Unicode::CaseFold        => 0.02,
 		warnings                 => 0.00,
