@@ -8,8 +8,8 @@ build_requires:
 configure_requires:
   Module::Build: 0.38
 dynamic_config: 1
-generated_by: 'Module::Build version 0.4003, CPAN::Meta::Converter version 2.120630'
-license: artistic
+generated_by: 'Module::Build version 0.4003, CPAN::Meta::Converter version 2.120921'
+license: artistic_2
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
@@ -48,11 +48,11 @@ requires:
   HTML::TreeBuilder: 4.2
   HTTP::Tiny: 0.022
   Hash::FieldHash: 0.12
-  IO::File: 1.15
   Lingua::EN::StopWordList: 1
   List::Compare: 0.37
   Pod::Usage: 1.51
   Text::CSV: 1.21
+  Text::CSV::Slurp: 1
   Text::Xslate: 1.5015
   Unicode::CaseFold: 0.02
   feature: 1.2
@@ -61,5 +61,5 @@ requires:
   strict: 0
   warnings: 0
 resources:
-  license: http://www.perlfoundation.org/artistic_license_1_0
+  license: http://www.perlfoundation.org/artistic_license_2_0
 version: 1.00
