@@ -4,7 +4,7 @@
       "Ron Savage <ron@savage.net.au>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Module::Build version 0.4003, CPAN::Meta::Converter version 2.120630",
+   "generated_by" : "Module::Build version 0.4003, CPAN::Meta::Converter version 2.120921",
    "license" : [
       "artistic_1"
    ],
@@ -41,11 +41,11 @@
             "HTML::TreeBuilder" : "4.2",
             "HTTP::Tiny" : "0.022",
             "Hash::FieldHash" : "0.12",
-            "IO::File" : "1.15",
             "Lingua::EN::StopWordList" : "1",
             "List::Compare" : "0.37",
             "Pod::Usage" : "1.51",
             "Text::CSV" : "1.21",
+            "Text::CSV::Slurp" : "1",
             "Text::Xslate" : "1.5015",
             "Unicode::CaseFold" : "0.02",
             "feature" : "1.2",
